test/sema/mismatching-binary-operands.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:17: error: invalid operands 'int' and 'bool' to '+'
    var foo = 4 + false;
}
